--- a/src/main.scss
+++ b/src/main.scss
@@ -396,7 +396,8 @@ ul.fa-ul {
   }
 }
 
-.authentication-form.disabled {
+.form.disabled,
+form.disabled {
   pointer-events: none;
   >* {
     opacity: 0.5;
