opportunity search template improvements

--- a/configuration/partials/opportunity/actions.hbs
+++ b/configuration/partials/opportunity/actions.hbs
@@ -1,8 +1,5 @@
-<div class="">
-  <div class="">
-    <a href="/search/opportunity/{{Id}}/{{title_slug}}{{> query_search}}" class="hide-sm">Find out more</a>
-    <a href="/search/opportunity/{{Id}}/{{title_slug}}{{> query_search}}" class="hide-md hide-lg"><span class="fal fa-info-circle fa-fw fa-2x" aria-hidden="true"></span></a>
-  </div>
+<div class="card-footer">
+  <a href="/search/opportunity/{{Id}}/{{title_slug}}{{> query_search}}" class="btn btn-primary">Find out more</a>
   <div class="pull-right">
     <div id="action-chips" class="chip-set">
       {{#if opportunity_contact_email ~}}
