--- a/configuration/templates/volunteering/opportunity.hbs
+++ b/configuration/templates/volunteering/opportunity.hbs
@@ -9,9 +9,9 @@
 
   {{#compare @root.data.opportunitySupplimentary.related.hits.total ">" 0 ~}}
   <div class="content-related">
-    <div class="v-margin-full">
+    <h3 class="v-margin-full">
       Similar opportunities
-    </div>
+    </h3>
     <div class="equal-height">
       <div class="columns col-gapless">
         {{#each @root.data.opportunitySupplimentary.related.hits.hits ~}}
