--- a/configuration/partials/opportunity/mini.hbs
+++ b/configuration/partials/opportunity/mini.hbs
@@ -1,5 +1,5 @@
-<div class="content-volunteering mini" data-opportunity-id="{{Id}}" data-opportunity-layout="Mini" data-opportunity-context="{{default viewContext "Other"}}">
-  {{> opportunity_key_info}}
+<div class="card mini" data-opportunity-id="{{Id}}" data-opportunity-layout="Mini" data-opportunity-context="{{default viewContext "Other"}}">
+  {{> opportunity_key_info type="mini"}}
   {{> opportunity_description limit="4.5rem" description=description}}
   {{> opportunity_actions slug=slug Id=Id}}
 </div>
