--- a/configuration/partials/opportunity/search-result.hbs
+++ b/configuration/partials/opportunity/search-result.hbs
@@ -1,6 +1,6 @@
-<div class="search-result" data-opportunity-id="{{Id}}" data-opportunity-layout="Search Result" data-opportunity-context="{{default viewContext "Search Results"}}">
-  {{> opportunity_key_info}}
-  <div class="divider"></div>
+<div class="card search-result b-margin-full" data-opportunity-id="{{Id}}" data-opportunity-layout="Search Result" data-opportunity-context="{{default viewContext "Search Results"}}">
+  {{> opportunity_key_info type="search-result"}}
+  {{!-- <div class="divider"></div> --}}
   {{#compare (trim (getProperty @root.data.profileInfo.notes Id)) "!==" "" ~}}
     {{> opportunity_description limit="3rem" description=description}}
     {{> opportunity_notes limit="3rem"}}
