--- a/src/main.scss
+++ b/src/main.scss
@@ -95,6 +95,7 @@ a:hover {
   color: $dark-color;
   text-decoration: underline;
 }
+.chip-set a:hover,
 a.pure-menu-link:hover {
   text-decoration: none;
 }
@@ -282,6 +283,9 @@ header {
   }
 }
 
+.card-header .organisation {
+  margin-bottom: 0;
+}
 
 .social .btn, .social-button {
   height: $unit*2.5;
