volunteer search form improvements

--- a/configuration/partials/search-info.hbs
+++ b/configuration/partials/search-info.hbs
@@ -1,5 +1,5 @@
 {{#if paging.totalResults ~}}
-<div class="search-info">
+<div class="search-info label t-margin">
   <strong>
     {{addCommas paging.totalResults}}
   </strong>
