--- a/configuration/templates/pages/hours.hbs
+++ b/configuration/templates/pages/hours.hbs
@@ -1,214 +1,223 @@
 <div class="container b-padding-full v-margin-full">
   <h1>
     {{#if @root.data.isAdmin ~}}
-    {{@root.route.metaData.adminTitle}}
+      {{@root.route.metaData.adminTitle}}
     {{else}}
-    {{@root.route.metaData.title}}
+      {{@root.route.metaData.title}}
     {{/if ~}}
   </h1>
 
   {{#compare (length @root.data.tasksInfo) 0 ~}}
-  {{> log_empty}}
+    {{> log_empty}}
   {{else}}
-  {{#unless @root.data.isAdmin ~}}
-  <h2 class="b-margin-full">
-    {{sumArray (pluck @root.data.tasksInfo "hours")}} total hours added
-  </h2>
-  {{/unless ~}}
+    {{#unless @root.data.isAdmin ~}}
+      <h2 class="b-margin-full">
+        {{sumArray (pluck @root.data.tasksInfo "hours")}} total hours added
+      </h2>
+    {{/unless ~}}
 
-  {{> log_action_buttons}}
+    {{> log_action_buttons}}
 
-  {{#each @root.data.tasksInfo ~}}
-  {{#unless @root.data.isAdmin ~}}
-  <h2>
-    Volunteering with {{organisation_name}}
-  </h2>
-  <form action="/submit-hours" method="POST">
-    <p>
-      {{hours}} hours added so far
-    </p>
-    <input type="hidden" name="task_id" value="{{task_id}}">
-    <div class="form-horizontal">
-      <div class="form-group">
-        <div class="col-4">
-          <label class="form-label" for="hours">
-            {{#compare hours ">" 0 ~}}
-            How many hours have you volunteered since last time?
-            {{else}}
-            How many hours have you volunteered since you started?
-            {{/compare ~}}
-          </label>
-        </div>
-        <div class="col-1 r-margin-full">
-          <input class="form-input" id="hours" name="hours" type="number" step="any" min="0" value="" placeholder="">
-        </div>
-        <div class="col-2">
-          {{#unless (compare (dateMath 'now-26y') ">" (moment @root.data.accountInfo.date_of_birth "YYYY-MM-DD"))}}
-          <button type="submit" class="btn btn-primary">Add hours</button>
-          {{/unless}}
-        </div>
+    {{#unless @root.data.isAdmin ~}}
+
+
+      <div id="individual-tasks-input">
+        {{#each @root.data.tasksInfo ~}}
+
+          <h2>
+            Volunteering with {{organisation_name}}
+          </h2>
+          <form action="/submit-hours" method="POST">
+            <p>
+              {{hours}} hours added so far
+            </p>
+            <input type="hidden" name="task_id" value="{{task_id}}">
+            <div class="form-horizontal">
+              <div class="form-group">
+                <div class="col-4">
+                  <label class="form-label" for="hours">
+                    {{#compare hours ">" 0 ~}}
+                      How many hours have you volunteered since last time?
+                    {{else}}
+                      How many hours have you volunteered since you started?
+                    {{/compare ~}}
+                  </label>
+                </div>
+                <div class="col-1 r-margin-full">
+                  <input class="form-input" id="hours" name="hours" type="number" step="any" min="0" value="" placeholder="">
+                </div>
+                <div class="col-2">
+                  {{#unless (compare (dateMath 'now-26y') ">" (moment @root.data.accountInfo.date_of_birth "YYYY-MM-DD"))}}
+                    <button type="submit" class="btn btn-primary">Add hours</button>
+                  {{/unless}}
+                </div>
+              </div>
+            </div>
+          </form>
+        {{/each}}
       </div>
-    </div>
-  </form>
-  {{else}}
+    {{else}}
 
-  <div class="columns col-gapless">
-    <div class="col-9">
-      <h2>
-        Volunteering with {{organisation_name}}
-        <span class="pull-right" data-collapse-target="#{{this.task_id}}-details">
+      {{#each @root.data.tasksInfo ~}}
+        <div class="columns col-gapless">
+          <div class="col-9">
+            <h2>
+              Volunteering with {{organisation_name}}
+              <span class="pull-right" data-collapse-target="#{{this.task_id}}-details">
           <span class="far fa-chevron-up" aria-hidden="false"></span>
         </span>
-      </h2>
-    </div>
-  </div>
+            </h2>
+          </div>
+        </div>
 
-  <div id="{{this.task_id}}-details">
-    {{#if task_description ~}}
-    <strong>Description:</strong> {{task_description}}
-    {{/if ~}}
+      <div id="{{this.task_id}}-details">
+        {{#if task_description ~}}
+          <strong>Description:</strong> {{task_description}}
+        {{/if ~}}
 
-    <form action="/admin-submit-group-hours" method="POST">
-      <div class="form-horizontal">
-        <input type="hidden" name="task_id" value="{{task_id}}">
-        <div class="form-group">
-          <div class="col-4">
-            <label for="task_description" class="form-label">List of volunteer names, one per line</label>
+        <form action="/admin-submit-group-hours" method="POST">
+          <div class="form-horizontal">
+            <input type="hidden" name="task_id" value="{{task_id}}">
+            <div class="form-group">
+              <div class="col-4">
+                <label for="task_description" class="form-label">List of volunteer names, one per line</label>
+              </div>
+              <div class="col-5">
+                <textarea rows="6" cols="40" id="volunteers" name="volunteers" {{>form_validation_attributes @root.context.metaData.taskInfoValidation.task_description}} class="form-input" value="{{@root.data.taskInfo.task_description}}"></textarea>
+              </div>
+            </div>
+            <div class="form-group">
+              <div class="col-4">
+                <label for="hours" class="form-label">
+                  Certificate to award
+                </label>
+              </div>
+              <div class="col-2">
+                <select class="form-select" required id="hours" name="hours" {{>form_validation_attributes @root.context.metaData.taskInfoValidation.hours}}>
+                  {{#each @root.context.metaData.certificates ~}}
+                    <option value="{{hours}}">{{name}} hours</option>
+                  {{/each ~}}
+                </select>
+              </div>
+            </div>
+            <div class="form-group">
+              <div class="col-4"></div>
+              <div class="col-1">
+                <button id="detail-submit" type="submit" class="btn btn-primary b-margin-full" id="group-hours-submit">
+                  Submit details
+                </button>
+              </div>
+            </div>
           </div>
-          <div class="col-5">
-            <textarea rows="6" cols="40" id="volunteers" name="volunteers" {{>form_validation_attributes @root.context.metaData.taskInfoValidation.task_description}} class="form-input" value="{{@root.data.taskInfo.task_description}}"></textarea>
+        </form>
+        {{#compare (length hours_list) ">" 0 ~}}
+          <div class="columns col-gapless">
+            <div class="col-4">
+              <strong>Volunteer name</strong>
+            </div>
+            <div class="col-2">
+              <strong>Certificate</strong>
+            </div>
+            <div class="col-2">
+              <strong>Claim code</strong>
+            </div>
+            <div class="col-1"></div>
+            <div class="col-1">
+              <a href="/admin-pdf/{{task_id}}" class="btn btn-primary r-margin b-margin" download>Download all</a>
+            </div>
+            <div class="col-1"></div>
           </div>
-        </div>
-        <div class="form-group">
-          <div class="col-4">
-            <label for="hours" class="form-label">
-              Certificate to award
-            </label>
-          </div>
-          <div class="col-2">
-            <select class="form-select" required id="hours" name="hours" {{>form_validation_attributes @root.context.metaData.taskInfoValidation.hours}}>
-              {{#each @root.context.metaData.certificates ~}}
-              <option value="{{hours}}">{{name}} hours</option>
-              {{/each ~}}
-            </select>
-          </div>
-        </div>
-        <div class="form-group">
-          <div class="col-4"></div>
-          <div class="col-1">
-            <button id="detail-submit" type="submit" class="btn btn-primary b-margin-full" id="group-hours-submit">
-              Submit details
-            </button>
-          </div>
-        </div>
-      </div>
-    </form>
-    {{#compare (length hours_list) ">" 0 ~}}
-    <div class="columns col-gapless">
-      <div class="col-4">
-        <strong>Volunteer name</strong>
-      </div>
-      <div class="col-2">
-        <strong>Certificate</strong>
-      </div>
-      <div class="col-2">
-        <strong>Claim code</strong>
-      </div>
-      <div class="col-1"></div>
-      <div class="col-1">
-        <a href="/admin-pdf/{{task_id}}" class="btn btn-primary r-margin b-margin" download>Download all</a>
-      </div>
-      <div class="col-1"></div>
-    </div>
-    {{#each hours_list ~}}
-    {{#ifAny claim_first_name claim_code ~}}
-    <form id="{{hours_id}}" method="POST" action="/admin-submit-individual-hours" class="inline-hours-form">
-      <input type="hidden" name="task_id" value="{{task_id}}">
-      <input type="hidden" name="verified" value="{{verified}}">
-      <input type="hidden" name="claim_code" value="{{claim_code}}">
-      <input type="hidden" name="hours_id" value="{{hours_id}}">
+          {{#each hours_list ~}}
+            {{#ifAny claim_first_name claim_code ~}}
+              <form id="{{hours_id}}" method="POST" action="/admin-submit-individual-hours" class="inline-hours-form">
+                <input type="hidden" name="task_id" value="{{task_id}}">
+                <input type="hidden" name="verified" value="{{verified}}">
+                <input type="hidden" name="claim_code" value="{{claim_code}}">
+                <input type="hidden" name="hours_id" value="{{hours_id}}">
 
-      <div class="columns col-gapless">
-        <div class="col-2">
-          <div class="form-group r-margin b-margin">
-            <input {{#unless claim_code}}disabled{{/unless}} class="form-input inline-edit" name="claim_first_name" value="{{claim_first_name}}">
-          </div>
-        </div>
-        <div class="col-2">
-          <div class="form-group r-margin b-margin">
-            <input {{#unless claim_code}}disabled{{/unless}} class="form-input inline-edit" name="claim_last_name" value="{{claim_last_name}}">
-          </div>
-        </div>
-        <div class="col-2">
-          {{!-- <input {{#unless claim_code}}disabled{{/unless}} class="inline-edit" type="number" step="any" min="0" name="hours" value="{{hours}}"> --}}
-          <div class="form-group r-margin b-margin">
-            <select class="form-select" required id="hours" name="hours" {{>form_validation_attributes @root.context.metaData.taskInfoValidation.hours}}>
-              {{#each @root.context.metaData.certificates ~}}
-              <option value="{{hours}}"{{#compare hours ../hours}} selected{{/compare}}>{{name}} hours</option>
-              {{/each ~}}
-            </select>
-          </div>
-        </div>
-        <div class="col-2">
-          <code class="claim-code">{{substr claim_code 0 10}}</code>
-        </div>
-        <div class="col-1">
-          {{#if claim_code}}
-          <button type="submit" class="btn inline-update-button bg-dark" style="display:none;">Update</button>
-          {{/if}}
-        </div>
-        <div class="col-2">
-          <a href="admin-pdf/{{task_id}}/{{hours_id}}" class="btn" download>Download</a>
-        </div>
-        <div class="col-1">
-          {{#if claim_code}}
-          <button type="button" class="btn" data-ajax-button='{
+                <div class="columns col-gapless">
+                  <div class="col-2">
+                    <div class="form-group r-margin b-margin">
+                      <input {{#unless claim_code}}disabled{{/unless}} class="form-input inline-edit" name="claim_first_name" value="{{claim_first_name}}">
+                    </div>
+                  </div>
+                  <div class="col-2">
+                    <div class="form-group r-margin b-margin">
+                      <input {{#unless claim_code}}disabled{{/unless}} class="form-input inline-edit" name="claim_last_name" value="{{claim_last_name}}">
+                    </div>
+                  </div>
+                  <div class="col-2">
+                    {{!-- <input {{#unless claim_code}}disabled{{/unless}} class="inline-edit" type="number" step="any" min="0" name="hours" value="{{hours}}"> --}}
+                    <div class="form-group r-margin b-margin">
+                      <select class="form-select" required id="hours" name="hours" {{>form_validation_attributes @root.context.metaData.taskInfoValidation.hours}}>
+                        {{#each @root.context.metaData.certificates ~}}
+                          <option value="{{hours}}"{{#compare hours ../hours}} selected{{/compare}}>{{name}} hours</option>
+                        {{/each ~}}
+                      </select>
+                    </div>
+                  </div>
+                  <div class="col-2">
+                    <code class="claim-code">{{substr claim_code 0 10}}</code>
+                  </div>
+                  <div class="col-1">
+                    {{#if claim_code}}
+                      <button type="submit" class="btn inline-update-button bg-dark" style="display:none;">Update</button>
+                    {{/if}}
+                  </div>
+                  <div class="col-2">
+                    <a href="admin-pdf/{{task_id}}/{{hours_id}}" class="btn" download>Download</a>
+                  </div>
+                  <div class="col-1">
+                    {{#if claim_code}}
+                      <button type="button" class="btn" data-ajax-button='{
             "url": "/admin-delete-hours?hours_id={{hours_id}}",
             "method": "DELETE",
             "successMessage": "Hours deleted",
             "failureMessage": "Failed to delete hours",
             "successCallback": "clearHoursForm"
           }'>Remove</button>
-          {{/if}}
-        </div>
-        <div class="col-1"></div>
-      </div>
-    </form>
-    {{/ifAny ~}}
-    {{/each ~}}
-    {{/compare ~}}
+                    {{/if}}
+                  </div>
+                  <div class="col-1"></div>
+                </div>
+              </form>
+            {{/ifAny ~}}
+          {{/each ~}}
+        {{/compare ~}}
+      {{/each ~}}
     {{/unless ~}}
     {{!-- This will probably have a captcha in it, hence the separation, and weird submit format --}}
   </div>
-  {{/each ~}}
   {{/compare ~}}
 </div>
+
+
 {{!-- <script src="https://#/recaptcha/api.js" async defer></script> --}}
 <script>
-document.addEventListener("DOMContentLoaded", function(event) {
-  $('.inline-hours-form :input').on('input',function () {
-    var submit = $(this).closest('form').find(':submit').show();
-  });
+  document.addEventListener("DOMContentLoaded", function(event) {
+    $('.inline-hours-form :input').on('input',function () {
+      var submit = $(this).closest('form').find(':submit').show();
+    });
 
-  $('.inline-update-button').click(function(){
-    $(this).hide();
+    $('.inline-update-button').click(function(){
+      $(this).hide();
+    })
+
+    $('.inline-delete-button').click(function(){
+      var submit = $(this).closest('form').hide();
+    })
   })
 
-  $('.inline-delete-button').click(function(){
-    var submit = $(this).closest('form').hide();
-  })
-})
-
-function clearHoursForm(response){
-  var data = JSON.parse(response);
-  $('#' + data.id).hide();
-}
-
-function preSubmit() {
-  var form = document.getElementById("user-details-form");
-  var isValid = form.checkValidity();
-  if (isValid) {
-    onSubmit();
+  function clearHoursForm(response){
+    var data = JSON.parse(response);
+    $('#' + data.id).hide();
   }
-}
+
+  function preSubmit() {
+    var form = document.getElementById("user-details-form");
+    var isValid = form.checkValidity();
+    if (isValid) {
+      onSubmit();
+    }
+  }
 </script>
