--- a/configuration/templates/pages/test.hbs
+++ b/configuration/templates/pages/test.hbs
@@ -1,7 +1,97 @@
-Ahoy
+<form id="sign-up-form" method="POST" class="active-form" data-component="TasksTrigger" data-TasksTrigger="sign-up">
+  <h1 class="x-padding">
+    Sign up
+  </h1>
+  <div class="l-margin r-margin">
+    <div class="bg-error s-rounded x-padding v-margin" id="active-form-message">
+      <span id="form-message"></span>
+    </div>
+  </div>
+  <div class="x-padding">
+    <div class="form-group has-icon-left">
+      <input class="form-input" type="email" id="cat-name" placeholder="Cat Name" data-lpignore="true" autocomplete="off" />
+    </div>
+    <div class="form-group has-icon-left">
+      <input class="form-input" type="password" id="dog-name" placeholder="Dog Name" data-lpignore="true" autocomplete="off" />
+    </div>
+    <div id="form-section-sign-up-buttons" class="t-margin">
+      <button class="btn btn-primary" type="submit" id="sign-up-submit">
+        Sign up
+      </button>
+      <p class="v-margin-full">
+        Read our <a href="/privacy" target="_blank">privacy notice</a>
+      </p>
+      <p class="v-margin-full">
+        Already have an account? <a href="/sign-in">Sign in</a>
+      </p>
+    </div>
+  </div>
+  <input type="hidden" name="redirect" id="redirect" value="home" />
+</form>
 
-{{{substr 'dick van dyke' (add (length (firstItem (split 'dick van dyke' " "))) 1)}}}
 
-<p>{{@root.data.pdfObject}}</p>
 
-{{#if @root.errors}}\"errors\": {{{safeStringify @root.errors}}},{{/if}}
+<script type="javascript/blocked" data-component-config="sign-up">
+  {
+    submit: {
+      preventDefault: true,
+      tasks: [
+       {
+          type: "elementManipulator",
+          config: { ">": { addClass: "disabled" } }
+          },
+          {
+          name: "testRequest",
+          type: "request",
+          config: { url: "/test-ajax" }
+          },
+          {
+            __doNotCompile: true,
+            name: "errorHandle",
+            type: "switch",
+            config: {
+              which: { __template: "
+                \{{#if errors.testRequest}}error
+                \{{else}}\{{data.testRequest.errors.[0].taskName}}\{{/if}}"
+                },
+            branches: {
+              default: {
+                tasks: [
+                  {
+                    type: "run",
+                    config: { code: "window.location.href = '/test-page?win=true'" }
+                  }
+                ]
+              },
+              error: {
+                tasks: [
+                  {
+                    type: "elementManipulator",
+                    config: {
+                      ">": { removeClass: "disabled" },
+                      "#active-form-message": { styles: { display: "block" } },
+                      "#form-message": { contents: { __template: "\An error occurred, \{{> account_details_form_fields}}" } }
+                    }
+                  }
+                ]
+              },
+              sendEmail: {
+                tasks: [
+                  {
+                    type: "elementManipulator",
+                    config: {
+                      ">": { removeClass: "disabled" },
+                      "#active-form-message": { styles: { display: "block" } },
+                      "#form-message": { contents: { __template: "\Email send was not successful, \{{> account_details_form_fields}}" } }
+                    }
+                  }
+                ]
+              }
+
+            }
+          }
+        }
+      ]
+    }
+  }
+</script>
