--- a/configuration/layouts/default.hbs
+++ b/configuration/layouts/default.hbs
@@ -125,7 +125,7 @@
                   <li class="menu-item">
                     <a href="#" data-component="TasksTrigger" data-TasksTrigger="sign-out">
                       <span class="far fa-fw fa-sign-out-alt" aria-hidden="true"></span>
-                      Sign-out
+                      Sign out
                     </a>
                   </li>
                 </ul>
