--- a/configuration/templates/account/sign-up.hbs
+++ b/configuration/templates/account/sign-up.hbs
@@ -1,4 +1,4 @@
-<form id="sign-up-form" method="POST" class="authentication-form container" data-component="TasksTrigger" data-TasksTrigger="sign-up">
+<form id="sign-up-form" method="POST" class="container form authentication-form" data-component="TasksTrigger" data-TasksTrigger="sign-up">
   <h1 class="x-padding">
     Sign up
   </h1>
@@ -8,7 +8,7 @@
     </div>
   </div>
   <div class="x-padding">
-    <div id="form-section-email">
+    <div id="form-section-email" class="form">
       {{> account_sign_in_social messageSelector="#sign-up-message"}}
 
       <div class="divider text-center v-margin-full" data-content="or"></div>
@@ -52,7 +52,9 @@
       tasks: [
         {
           type: "elementManipulator",
-          config: { ">": { addClass: "disabled" } }
+          config: {
+            ">": { addClass: "disabled" }
+          }
         },
         {
           name: "signUp",
