--- a/configuration/templates/pages/task.hbs
+++ b/configuration/templates/pages/task.hbs
@@ -17,7 +17,7 @@
     </div>
     <div class="form-horizontal">
       <div class="form-group">
-        <div class="col-2">
+        <div class="col-3">
           <label for="organisation_name" class="form-label">
             {{#if admin ~}}
             Organisation your group has volunteered with
@@ -31,7 +31,7 @@
         </div>
       </div>
       <div class="form-group">
-        <div class="col-2">
+        <div class="col-3">
           <label for="location" class="form-label">
             Location
           </label>
@@ -41,7 +41,7 @@
         </div>
       </div>
       <div class="form-group">
-        <div class="col-2">
+        <div class="col-3">
           <label for="organisation_charity_number" class="form-label r-margin">
             Scottish charity number (optional)
           </label>
@@ -54,7 +54,7 @@
         </div>
       </div>
       <div class="form-group">
-        <div class="col-2">
+        <div class="col-3">
           <label for="task_description" class="form-label">Volunteering description (optional)</label>
         </div>
         <div class="col-5">
@@ -63,13 +63,14 @@
       </div>
     </div>
 
+    <div class="divider"></div>
     <h2>
       Details of the person who manages this volunteering task
     </h2>
 
     <div class="form-horizontal">
       <div class="form-group">
-        <div class="col-2">
+        <div class="col-3">
           <label for="volunteer_manager_first_name" class="form-label">
             Volunteer manager
           </label>
@@ -102,7 +103,7 @@
         </div>
       </div>
       <div class="form-group">
-        <div class="col-2">
+        <div class="col-3">
           <label for="volunteer_manager_title" class="form-label">
             Job title
           </label>
@@ -119,7 +120,7 @@
         </div>
       </div>
       <div class="form-group">
-        <div class="col-2">
+        <div class="col-3">
           <label for="volunteer_manager_email" class="form-label">
             Email address
           </label>
@@ -135,7 +136,7 @@
         </div>
       </div>
       <div class="form-group">
-        <div class="col-2">
+        <div class="col-3">
           <label for="volunteer_manager_phone" class="form-label">
             Phone number (optional)
           </label>
@@ -152,9 +153,9 @@
         </div>
       </div>
       <div class="form-group">
-        <div class="col-2">
+        <div class="col-3">
           <label for="sdg" class="form-label r-margin">
-            Which UN Sustainable Development Goal does this task match?
+            Which UN Sustainable Development Goal does this task match? (optional)
           </label>
         </div>
         <div class="col-5">
@@ -167,10 +168,17 @@
         </div>
       </div>
     </div>
-    {{!-- This will probably have a captcha in it, hence the separation, and weird submit format --}}
-    <button id="detail-submit" type="submit" class="btn btn-primary b-margin-full" id="register-interest-submit" >
-      Submit details
-    </button>
+    <div class="form-horizontal">
+      <div class="form-group">
+        <div class="col-3"></div>
+        <div class="col-5">
+          {{!-- This will probably have a captcha in it, hence the separation, and weird submit format --}}
+          <button id="detail-submit" type="submit" class="btn btn-primary b-margin-full" id="register-interest-submit" >
+            Submit details
+          </button>
+        </div>
+      </div>
+    </div>
   </form>
   {{/withExtend ~}}
 </div>
