--- a/configuration/templates/volunteering/opportunity-head-tags.hbs
+++ b/configuration/templates/volunteering/opportunity-head-tags.hbs
@@ -1,10 +1,10 @@
 {{#if data.primaryResponse.hits.hits.[0] ~}}
 {{#with data.primaryResponse.hits.hits.[0]._source ~}}
 
-<title>{{title}} with {{organisation_name}} – Volunteer Scotland Search</title>
-<meta property="og:title" content="{{title}} with {{organisation_name}} – Volunteer Scotland Search" data-dynamic="true">
-<meta itemprop="name" content="{{title}} with {{organisation_name}} – Volunteer Scotland Search" data-dynamic="true">
-<meta name="twitter:title" content="{{title}} with {{organisation_name}} – Volunteer Scotland Search" data-dynamic="true">
+<title>{{title}} with {{organisation_name}} – Saltire Awards</title>
+<meta property="og:title" content="{{title}} with {{organisation_name}} – Saltire Awards" data-dynamic="true">
+<meta itemprop="name" content="{{title}} with {{organisation_name}} – Saltire Awards" data-dynamic="true">
+<meta name="twitter:title" content="{{title}} with {{organisation_name}} – Saltire Awards" data-dynamic="true">
 
 {{#ifAny organisation.logo_url og_image ../og_image ~}}
 <meta property="og:image" content="{{default organisation_logo_url og_image ../og_image}}" data-dynamic="true">
@@ -34,7 +34,7 @@
 {{#if Id ~}}
 <meta property="og:url" content="https://search.volunteerscotland.net/opportunity/{{Id}}/{{title_slug}}&utm_source=saltire-awards&utm_campaign=search&utm_medium=website" />
 {{/if ~}}
-<meta property="og:site_name" content="Volunteer Scotland" />
+<meta property="og:site_name" content="Saltire Awards" />
 
 <script type="application/ld+json" data-dynamic="true">
   {{> opportunity_json_ld}}
@@ -42,7 +42,7 @@
 
 {{/with ~}}
 {{else}}
-<title>Opportunity – Volunteer Scotland Search</title>
-<meta property="og:title" content="Opportunity – Volunteer Scotland Search" data-dynamic="true">
+<title>Opportunity – Saltire Awards</title>
+<meta property="og:title" content="Opportunity – Saltire Awards" data-dynamic="true">
 {{/if ~}}
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
